:lipstick: Fix some layout issues

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -59,6 +59,10 @@ header {
   margin: 0 0.4em;
 }
 
+.nav__item {
+  white-space: nowrap;
+}
+
 .nav__link:hover {
   text-decoration: none;
   opacity: 0.5;
@@ -101,8 +105,8 @@ header {
 
 .btn__post {
   width: 100px;
-  height: 50px;
-  margin: 1rem;
+  height: 35px;
+  margin: 0 auto;
 }
 
 .text-center {
@@ -203,8 +207,8 @@ header {
   bottom: 0;
   left: 0;
   right: 0;
-  display: flex;
-  height: 6rem;
+  display: block;
+  height: 7rem;
 }
 
 .f-grow-1 {
@@ -214,6 +218,11 @@ header {
 .w-100 {
   width: 100%;
   max-width: 700px;
+  margin: 0, auto;
+}
+
+.h-100 {
+  height: 100%;
 }
 
 #input {
@@ -279,5 +288,14 @@ header {
   .row {
     display: flex;
     justify-content: space-between;
+  }
+
+  .form {
+    display: flex;
+  }
+
+  .btn__post {
+    height: 50px;
+    margin: 1rem;
   }
 }
